<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faculty.ShowApprovedOds"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8a0e29"
        android:gravity="center_vertical|end"
        >
        <TextView
            android:id="@+id/goHomeTextView_ShowApprovedOds"
            android:layout_marginEnd="7dp"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:text="Home"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/go_home_button"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dateEntryEditText"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:hint="Enter a date in format dd-mm-yy"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/searchOdsBtn_Faculty"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="50dp"
            android:text="Search"
            android:fontFamily="sans-serif-thin"
            android:textSize="14sp"/>
    </LinearLayout>


    <ListView
        android:id="@+id/showOdsListView_Faculty"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>