...


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/EmailEditText"
        android:padding="15dp"
        android:background="@drawable/shape_email"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/white"/>
    <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/PasswordEditText"
        android:padding="15dp"
        android:background="@drawable/shape_email"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
...
            android:layout_margin="10dp"
            android:layout_gravity="left"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textAllCaps="false"
        android:shadowColor="@android:color/transparent"
        android:padding="14dp"
        android:layout_marginTsop="10dp"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
...
