<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/approveOdOption"
        android:title="Approve OD"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/showApprovedOdsOption"
        android:title="OD Search"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logoutFacultyOption"
        android:title="Logout"
        app:showAsAction="never"
        />


</menu>