<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Student.StudentDashboard">

    <!--<LinearLayout-->
        <!--android:id="@+id/container_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<include-->
            <!--android:id="@+id/toolbar"-->
            <!--layout="@layout/toolbar_main" />-->
    <!--</LinearLayout>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/facultyToolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8a0e29"
        >

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:divider="@android:color/background_dark"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/student_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/user" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/student_image"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/email_faculty_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>